# jstime

./: .devcontainer.json  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  GOVERNANCE.md  PERFORMANCE.md  QUICK_START.md  README.md  RELEASING.md  release.toml  test-writefile-output.txt  test.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-settings.yml  dependabot.yml
.reuse/: dep5
benchmarks/: IMPLEMENTATION_SUMMARY.md  README.md  js_benchmarks.js  performance-ci-example.md
cli/: Cargo.toml  README.md  build.rs  main.rs  repl_autocomplete.rs
cli/tests/: test_cli.rs  test_repl_autocomplete.rs
cli/tests/fixtures/: console-printer.js  fetch-api.js  function-does-not-exist.js  module.mjs  queue-microtask.js  temporal.js  throw.js  timers.js  top-level-await.js
cli/tests/fixtures/deep/: hello.mjs  once.mjs  world.mjs
cli/tests/fixtures/module-graph-exec-order/: a.mjs  b.mjs  c.mjs  root.mjs
core/: Cargo.toml  LICENSE  README.md
core/benches/: crypto_bench.rs  module_cache_bench.rs  runtime_bench.rs
core/src/: buffered_random.rs  error.rs  event_loop.rs  isolate_state.rs  js_loading.rs  lib.rs  module.rs  pool.rs  script.rs  sourcemap.rs
core/src/builtins/: README.md  console.js  event.js  fetch_impl.rs  fs.js  fs_impl.rs  mod.rs  performance_impl.rs  temporal.js  timers_impl.rs  url-bundle.js  url.js  url_impl.rs
core/src/builtins/node/: buffer.js  buffer_impl.rs  dgram.js  dgram_impl.rs  events.js  events_impl.rs  fs.js  fs_impl.rs  process.js  process_impl.rs
core/src/builtins/polyfills/: date_locale.js
core/src/builtins/url/: index.js
core/src/builtins/w3c/: crypto.js  crypto_impl.rs  performance.js
core/src/builtins/whatwg/: base64.js  base64_impl.rs  console_impl.rs  event.js  event_impl.rs  fetch.js  fetch_impl.rs  queue_microtask.js  queue_microtask_impl.rs  streams.js  streams_impl.rs  structured_clone.js  structured_clone_impl.rs  text_encoding.js  text_encoding_impl.rs  timers.js  timers_impl.rs  url.js  url_impl.rs  url_impl_old.rs  url_old.js
core/tests/: CONFORMANCE_TESTS.md  README.md  test_api.rs  test_buffer.rs  test_builtins.rs  test_common_helpers.rs  test_completions.rs  test_conformance_base64.rs  test_conformance_console.rs  test_conformance_crypto.rs  test_conformance_event.rs  test_conformance_fetch.rs  test_conformance_json_modules.rs  test_conformance_performance.rs  test_conformance_streams.rs  test_conformance_structured_clone.rs  test_conformance_text_encoding.rs  test_conformance_timers.rs  test_conformance_url.rs  test_conformance_webassembly.rs  test_console.rs  test_crypto.rs  test_dgram.rs  test_dynamic_import.rs  test_edge_cases.rs  test_event_optimization.rs  test_events.rs  test_fetch.rs  test_fs.rs  test_integration_complex.rs  test_module_cache.rs  test_node_modules.rs  test_parallel_loading.rs  test_pool.rs  test_process.rs  test_stress.rs  test_string_cache.rs  test_temporal.rs  test_timers.rs  test_warmup.rs  (+2 more)
core/tests/common/: mod.rs
core/tests/fixtures/: README.md  hello-world.js
core/tests/fixtures/buffer/: test-alloc-fill.js  test-alloc.js  test-bytelength.js  test-compare.js  test-concat.js  test-copy.js  test-fill.js  test-from-array.js  test-from-base64.js  test-from-hex.js  test-from-string.js  test-indexof.js  test-isbuffer.js  test-isencoding.js  test-module-exists.js  test-named-imports.js  test-readwrite.js  test-tojson.js  test-tostring-base64.js  test-tostring-hex.js
core/tests/fixtures/crypto/: test_aes_gcm_encrypt_decrypt.js  test_aes_gcm_with_aad.js  test_byte_offset.js  test_digest_algorithm_object.js  test_digest_arraybuffer.js  test_digest_empty.js  test_digest_sha256.js  test_digest_sha384.js  test_digest_sha512.js  test_export_non_extractable.js  test_generate_key_aes.js  test_generate_key_hmac.js  test_hmac_sha384.js  test_hmac_sha512.js  test_hmac_sign_verify.js  test_key_import_export.js
core/tests/fixtures/events/: test-basic-emit.js  test-default-import.js  test-eventtarget-inheritance.js  test-listener-count.js  test-module-exists.js  test-named-imports.js  test-once.js  test-prepend-listener.js  test-remove-all-listeners.js  test-remove-listener.js
core/tests/fixtures/fs/: test-access.js  test-appendfile.js  test-chmod.js  test-chown.js  test-constants.js  test-content.txt  test-copyfile.js  test-lstat.js  test-mkdir.js  test-mkdtemp.js  test-module-exists.js  test-named-imports.js  test-readdir-empty.js  test-readdir-error.js  test-readdir.js  test-readfile-buffer.js  test-readfile-encoding.js  test-readfile-error.js  test-readfile-string.js  test-readfile.txt  test-realpath.js  test-rename-new.txt  test-rename.js  test-rm.js  test-stat.js  test-symlink-readlink.js  test-truncate.js  test-unlink.js  test-utimes.js  test-writefile.js
core/tests/fixtures/json/: simple.json  test-data.json
core/tests/fixtures/module-cache/: main.js  module-a.js  module-b.js  shared.js
core/tests/fixtures/modules/: import-meta-example.js
core/tests/fixtures/parallel-modules/: lib-x.js  lib-y.js  main.js  util-a.js  util-b.js  util-c.js
crates/cli/: Cargo.toml  main.rs
docs/: FEATURES.md  FETCH_API.md  PERFORMANCE_IMPROVEMENT_RECOMMENDATIONS.md  README.md  benchmark_results_raw.txt  runtime.md
examples/: README.md  console-demo.js  crypto-advanced-demo.js  crypto-demo.js  data-example.json  data.json  dgram-demo.js  dynamic-import-example.mjs  error-handling-demo.js  events-demo.js  fetch-demo.mjs  fs-complete-demo.js  fs-demo.js  json-import-example.js  math-helper.mjs  (+9 more)
(+67 files in other folders)
