[package]
name = "jstime"
version = "0.7.0"
authors = ["Myles Borins <myles.borins@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Another JS Runtime"
repository = "https://github.com/jstime/jstime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = "0.8.1"
rustyline = "6.2.0"
