[package]
name = "jstime"
version = "0.8.10-alpha.0"
description = "Another JS Runtime"
readme = "README.md"
authors = ["the jstime authors"]
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/jstime/jstime"

[dependencies]
rusty_v8 = "0.8.1"
rustyline = "6.2.0"

[package.metadata.release]
sign-commit	= true
sign-tag = true
disable-publish = true
pre-release-commit-message = "{{version}}"
post-release-commit-message = "Working on {{next_version}}"
