[package]
name = "jstime"
version = "0.46.1-alpha.0"
description = "Another JS Runtime"
readme = "README.md"
license = "Apache-2.0"
authors = ["the jstime authors"]
edition = "2021"
repository = "https://github.com/jstime/jstime"
default-run = "jstime"

[[bin]]
name = "jstime"
path = "main.rs"

[dependencies]
jstime_core = { path = "../core", version = "^0.46.1-alpha.0"}
rustyline = "10.1.1"
structopt = "0.3.26"
dirs = "5.0.1"

[build-dependencies]
jstime_core = { path = "../core", version = "^0.46.1-alpha.0"}

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"

[package.metadata.release]
tag-prefix = ""
