[package]
name = "jstime"
version = "0.54.0"
description = "Another JS Runtime"
readme = "README.md"
license = "Apache-2.0"
authors = ["the jstime authors"]
edition = "2021"
repository = "https://github.com/jstime/jstime"
default-run = "jstime"

[[bin]]
name = "jstime"
path = "main.rs"

[dependencies]
jstime_core = { path = "../core", version = "^0.54.0" }
rustyline = "17.0.2"
structopt = "0.3.26"
dirs = "6.0.0"

[build-dependencies]
jstime_core = { path = "../core", version = "^0.54.0" }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[package.metadata.release]
tag-prefix = ""
