[package]
name = "jstime_core"
version = "0.58.0"
description = "Another JS Runtime"
readme = "README.md"
license = "Apache-2.0"
authors = ["the jstime authors"]
edition = "2024"
repository = "https://github.com/jstime/jstime"

[dependencies]
v8 = "140.2.0"
lazy_static = "1.5.0"
url = "2.5"
urlencoding = "2.1"
ureq = "3.1"
rustc-hash = "2.1"

[dev-dependencies]
serde_json = "1.0"

[package.metadata.release]
tag = false
