[package]
name = "jstime_core"
version = "0.65.0"
description = "Another JS Runtime"
readme = "README.md"
license = "Apache-2.0"
authors = ["the jstime authors"]
edition = "2024"
repository = "https://github.com/jstime/jstime"

[dependencies]
v8 = "145.0.0"
ada-url = "3.4"
ureq = "3.1"
rustc-hash = "2.1"
filetime = "0.2"
ring = "0.17"
align-data = "0.1.0"
smallvec = "1.13"
base64-simd = "0.8"
getrandom = "0.3"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "runtime_bench"
harness = false

[package.metadata.release]
tag = false

[[bench]]
name = "module_cache_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false
