[package]
name = "jstime"
version = "0.11.1-alpha.0"
license = "Apache-2.0"
authors = ["the jstime authors"]
edition = "2018"
repository = "https://github.com/jstime/jstime"
default-run = "jstime"

[[bin]]
name = "jstime"
path = "main.rs"

[dependencies]
jstime_core = { path = "../core" }
rustyline = "6.2.0"
structopt = "0.3.17"

[package.metadata.release]
sign-commit	= true
sign-tag = true
disable-publish = true
pre-release-commit-message = "{{version}}"
post-release-commit-message = "Working on {{next_version}}"
